@@ -110,6 +110,7 @@
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
+                                        <exclude>module-info.class</exclude>
                                         <exclude>it/polimi/ingsw/am02/client/**</exclude>
                                         <exclude>it.polimi.ingsw.am02.images/**</exclude>
                                         <exclude>it.polimi.ingsw.am02.fonts/**</exclude>
@@ -138,6 +139,7 @@
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
+                                        <exclude>module-info.class</exclude>
                                         <exclude>it/polimi/ingsw/am02/server/**</exclude>
                                         <exclude>it/polimi/ingsw/am02/server/controller/**</exclude>
                                         <exclude>it/polimi/ingsw/am02/server/model/**</exclude>
@@ -150,7 +152,12 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>it.polimi.ingsw.am02.ClientApp</mainClass>
+                                    <mainClass>it.polimi.ingsw.am02.ClientLauncher</mainClass>
+                                    <manifestEntries>
+                                        <Main-Class>it.polimi.ingsw.am02.ClientLauncher</Main-Class>
+                                        <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
+                                        <JAVA_TOOL_OPTIONS>-Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8</JAVA_TOOL_OPTIONS>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                         </configuration>
